fixed responsiveness on mobile for nav and prpage

--- a/front-End/src/components/NavBar/navbar.css
+++ b/front-End/src/components/NavBar/navbar.css
@@ -3,10 +3,3 @@
     color: lightgray;;
 }
 
-/* @media (max-width: 600px) {
-
-.navbar>.container{
-    flex-wrap: nowrap;
-}
-
-} */
